# internal/app/app.go
@@ -120,6 +120,7 @@ func New() *fiber.App {
 	skills.Put("/:id", handler.UpdateSkill)
 	skills.Delete("/:id", handler.DeleteSkill)
 	skills.Post("/:id/versions", handler.CreateSkillVersion)
+	skills.Put("/:id/versions", handler.UploadSkillZip)
 	skills.Get("/:id/versions", handler.ListSkillVersions)
 	skills.Get("/:id/versions/:version", handler.GetSkillVersion)
 	skills.Delete("/:id/versions/:version", handler.DeleteSkillVersion)
@@ -127,7 +128,6 @@ func New() *fiber.App {
 	skills.Post("/:id/versions/:version/demote", handler.DemoteSkillVersion)
 	skills.Post("/:id/versions/:version/archive", handler.ArchiveSkillVersion)
 	skills.Post("/:id/versions/:version/duplicate", handler.DuplicateSkillVersion)
-	skills.Post("/:id/versions/:version/upload", handler.UploadSkillZip)
 	skills.Get("/:id/versions/:version/download", handler.DownloadSkillZip)
 	skills.Get("/:id/versions/:version/files", handler.ListSkillFiles)
 	skills.Get("/:id/versions/:version/files/content", handler.GetSkillFileContent)
